<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register"
        android:orientation="vertical"
        android:gravity="center_horizontal" android:background="@color/dark">

    <ImageView android:layout_width="wrap_content"
               app:srcCompat="@drawable/books"
               android:layout_height="100dp"
               android:layout_marginTop="30dp"
    />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:ems="10"
            android:id="@+id/txtUsername" android:hint="@string/Username"
            android:textColor="@android:color/holo_blue_bright"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:id="@+id/txtPassword" android:hint="@string/Password"
            android:textColor="@android:color/holo_blue_bright"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:id="@+id/txtEmail" android:hint="@string/Email"
            android:textColor="@android:color/holo_blue_bright"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_account2"
            android:ems="10"
            android:id="@+id/txtFirstName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="20dp"
            android:drawableLeft="@drawable/ic_account2"
            android:layout_marginTop="30dp"
            android:hint="@string/last_name"
            android:ems="10"
            android:id="@+id/txtLastName"/>
    <Button
            android:text="@string/register"
            android:layout_marginTop="40dp"
            android:textColor="#FFFFFF"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:textSize="20sp"
            android:background="@drawable/custom_button2"/>


</LinearLayout>