<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal" android:background="@color/dark">

    <ImageView android:layout_width="wrap_content"
               app:srcCompat="@drawable/books"
               android:layout_height="130dp"
               android:layout_marginTop="40dp"
    />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:id="@+id/txtUsername" android:hint="@string/Username"
            android:textColor="@android:color/holo_blue_bright"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:id="@+id/txtPassword" android:hint="@string/Password"
            android:textColor="@android:color/holo_blue_bright"/>
    <Button
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="40dp"
            android:textSize="20sp"

            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button2"
    />
    <Button
            android:text="@string/register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button2"
    />
</LinearLayout>