<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView

            android:textColor="@android:color/holo_blue_bright"
            android:layout_width="72dp"
            android:text="@string/book_id"
            android:textAlignment="viewStart"
            android:layout_height="26dp"
            android:id="@+id/labelID" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="@string/book_name"
            android:layout_width="92dp"
            android:layout_height="18dp"
            android:id="@+id/labelName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/labelID"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="@string/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelAuthor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelName"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSurname" app:layout_constraintStart_toEndOf="@+id/labelAuthor"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/txtName"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtReservationID" app:layout_constraintStart_toEndOf="@+id/labelID"
            android:layout_marginStart="4dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtName" app:layout_constraintStart_toEndOf="@+id/labelName"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/txtReservationID"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelCategory" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelAuthor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelLocation" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/labelCategory" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtStart" app:layout_constraintStart_toEndOf="@+id/labelCategory"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/labelAuthor"/>
    <TextView
            android:textColor="@android:color/holo_blue_bright"

            android:text="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPhoneNo" app:layout_constraintStart_toEndOf="@+id/labelLocation"
            android:layout_marginStart="8dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtStart"/>
    <Button
            android:background="@drawable/custom_buttom"
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate" android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:background="@drawable/custom_buttom"

            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btnUpdate"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp" app:srcCompat="@drawable/dotted_line"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:background="@android:color/holo_blue_bright" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNo"/>
</android.support.constraint.ConstraintLayout>